--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -176,8 +176,9 @@ span.psw {
   </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script >
-  {% if len>1 %}
+  {% if len>0 %}
   function executeQuery() {
+  console.log('sending')
   var val, date;
   $.ajax({
    data: JSON.stringify({
