--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8", name="viewport" , content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Login Page</title>
     <style>
     body {font-family: Arial, Helvetica, sans-serif;}
         form {
@@ -96,12 +96,10 @@ span.psw {
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
+      <p> New User? Click <a href="/signup">Here</a></p>
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
+
 
 </form>
 
