--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8", name="viewport" , content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>SignUp Page</title>
     <style>
     body {font-family: Arial, Helvetica, sans-serif;}
         form {
@@ -96,6 +96,7 @@ span.psw {
     <input type="password" placeholder="Enter Password" name="con_password" required>
 
     <button type="submit">Login</button>
+      <p> Already Have an Account? Click <a href="/login">Here</a></p>
 
   </div>
 
